--- a/css/style.css
+++ b/css/style.css
@@ -344,25 +344,22 @@
   overflow: hidden;
 
   background-image: linear-gradient(to right bottom, #aeb0b3, #343a40);
-
-  /* temporary */
-  height: 50rem;
 }
 
 .cta-text-box {
-  padding: 4.8rem 6.8rem 6.8rem 6.4rem;
+  padding: 2.4rem 3.2rem 3.2rem 3.2rem;
   color: #1a1d20;
 }
 
 .cta .heading-secondary {
   color: #1f2326;
-  margin-bottom: 3.2rem;
+  margin-bottom: 2.4rem;
 }
 
 .cta-text {
   font-size: 1.8rem;
   line-height: 1.8;
-  margin-bottom: 4.8rem;
+  margin-bottom: 3.2rem;
 }
 
 .cta-img-box {
@@ -379,6 +376,53 @@
 .cta-form {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  column-gap: 3.2rem;
-  row-gap: 2.4rem;
+  column-gap: 3rem;
+  row-gap: 2.2rem;
+  align-items: center;
+}
+
+.full-width {
+  grid-column: 1 / -1;
+}
+
+.cta-form label {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+
+.cta-form input,
+.cta-form textarea {
+  width: 100%;
+  padding: 1.2rem;
+  font-size: 1.8rem;
+  font-family: inherit;
+  color: inherit;
+  border: none;
+  background-color: #ebebec;
+  border-radius: 9px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.cta-form input::placeholder,
+.cta-form textarea::placeholder {
+  color: #aaa;
+}
+
+.cta-form textarea {
+  height: 14rem;
+  resize: none;
+  display: block;
+  line-height: 1.2;
+}
+
+.cta-form button {
+  grid-column: 1 / -1;
+  justify-self: center;
+}
+
+.cta *:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.5rem rgba(235, 235, 236, 0.5);
 }
